--- a/src/assets/scss/section/_layout.scss
+++ b/src/assets/scss/section/_layout.scss
@@ -1,14 +1,92 @@
 // header, main, footer layout 구조 형성
 
 #header {
-  background-color: pink;
   width: 100%;
   height: 140px;
   padding: 20px 50px 10px;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  position: relative;
+  box-shadow: 0px 10px 10px #888;
+
   .header_top {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+
+    .logo_box {
+      .ham_Btn {
+        display: none;
+        width: 32px;
+        height: 32px;
+        cursor: pointer;
+        background: transparent;
+
+        .bar {
+          width: 100%;
+          height: 4px;
+          background-color: var(--skyblue);
+          border-radius: 4px;
+          transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+
+          &:nth-child(2) {
+            margin: 6px 0;
+          }
+        }
+        // hamBtn Click event-----------------------
+        &.open {
+          .bar {
+            &:nth-child(1) {
+              transform: rotate(45deg) translate(8px, 5px);
+            }
+            &:nth-child(2) {
+              opacity: 0;
+            }
+            &:nth-child(3) {
+              transform: rotate(-45deg) translate(9px, -6px);
+            }
+          }
+        }
+      }
+      .header_logo {
+        font-size: 36px;
+        font-weight: 900;
+        color: var(--skyblue);
+      }
+    }
+  }
+
+  .header_nav {
+    display: block;
+    width: 100%;
+    height: 50px;
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 10px 50px;
+
+    background-color: var(--white);
+
+    overflow: hidden;
+    .navi {
+      display: flex;
+      gap: 50px;
+      font-size: 19px;
+
+      li .link_css {
+        color: var(--gray500);
+        transition: all 0.5s ease;
+
+        &:hover,
+        li.active {
+          color: var(--gray200);
+        }
+      }
+    }
   }
 }
 
@@ -16,7 +94,8 @@
   background-color: skyblue;
   width: 100%;
   height: 500px;
-  padding: 20px 50px;
+  // padding: 100px 50px;
+  padding: 5vw 12vw;
 }
 
 #footer {
@@ -28,5 +107,53 @@
 
   p {
     color: var(--gray300);
+  }
+}
+
+@media (max-width: 768px) {
+  #header {
+    height: 80px;
+    padding: 19px 14px;
+
+    .header_top {
+      .logo_box {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        .ham_Btn {
+          display: block;
+        }
+        .header_logo {
+          font-size: 30px;
+        }
+      }
+    }
+    .header_nav {
+      position: fixed;
+      width: calc(100vw - 30%);
+      height: 100vh;
+      position: fixed;
+      top: 80px;
+      left: calc(-100vw + 25%);
+      transition: left 0.5s ease-in-out;
+
+      box-shadow: 10px 10px 15px #888;
+      padding: 70px;
+
+      .navi {
+        flex-direction: column;
+        align-items: center;
+      }
+      &.open {
+        left: 0;
+      }
+    }
+  }
+  #main {
+    padding: 60px 14px;
+    font-size: 15px;
+  }
+  #footer {
+    font-size: 14px;
   }
 }
