mainpage api, nav 경로 설정

--- a/src/assets/scss/setting/_reset.scss
+++ b/src/assets/scss/setting/_reset.scss
@@ -45,7 +45,7 @@ input,
 select,
 table,
 textarea {
-  font-family: var(--mainfont-nanum), var(--mainfont-nexon),
+  font-family: var(--mainfont-Paperozi), var(--mainfont-pretendard),
     "Apple SD Gothic Neo", "Malgun Gothic", "맑은 고딕", helvetica, sans-serif;
 }
 
