--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -32,7 +32,7 @@
   --skyblue: #9bc8f2;
 
   // 폰트 셋팅
-  font-family: var(--mainfont-pretendard), var(--mainfont-Paperozi);
+  font-family: var(--mainfont-Paperozi), var(--mainfont-pretendard);
   font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
