--- a/src/assets/scss/section/_layout.scss
+++ b/src/assets/scss/section/_layout.scss
@@ -1,112 +1,112 @@
 // header, main, footer layout 구조 형성
-
-#header {
-  width: 100%;
-  height: 140px;
-  padding: 20px 50px 10px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-  position: relative;
-  box-shadow: 0px 10px 10px #888;
-
-  .header_top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    .logo_box {
-      .ham_Btn {
-        display: none;
-        width: 32px;
-        height: 32px;
-        cursor: pointer;
-        background: transparent;
-
-        .bar {
-          width: 100%;
-          height: 4px;
-          background-color: var(--skyblue);
-          border-radius: 4px;
-          transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
-
-          &:nth-child(2) {
-            margin: 6px 0;
-          }
-        }
-        // hamBtn Click event-----------------------
-        &.open {
-          .bar {
-            &:nth-child(1) {
-              transform: rotate(45deg) translate(8px, 5px);
-            }
-            &:nth-child(2) {
-              opacity: 0;
-            }
-            &:nth-child(3) {
-              transform: rotate(-45deg) translate(9px, -6px);
-            }
-          }
-        }
-      }
-      .header_logo {
-        font-size: 36px;
-        font-weight: 900;
-        color: var(--skyblue);
-      }
-    }
-  }
-
-  .header_nav {
-    display: block;
+body {
+  overflow-x: hidden;
+  #header {
     width: 100%;
-    height: 50px;
+    height: 140px;
+    padding: 20px 50px 10px;
 
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    padding: 10px 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
-    background-color: var(--white);
+    position: relative;
+    box-shadow: 0px 10px 10px #888;
 
-    overflow: hidden;
-    .navi {
+    .header_top {
       display: flex;
-      gap: 50px;
-      font-size: 19px;
+      justify-content: space-between;
+      align-items: center;
 
-      li .link_css {
-        color: var(--gray500);
-        transition: all 0.5s ease;
+      .logo_box {
+        .ham_Btn {
+          display: none;
+          width: 32px;
+          height: 32px;
+          cursor: pointer;
+          background: transparent;
 
-        &:hover,
-        li.active {
-          color: var(--gray200);
+          .bar {
+            width: 100%;
+            height: 4px;
+            background-color: var(--skyblue);
+            border-radius: 4px;
+            transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+
+            &:nth-child(2) {
+              margin: 6px 0;
+            }
+          }
+          // hamBtn Click event-----------------------
+          &.open {
+            .bar {
+              &:nth-child(1) {
+                transform: rotate(45deg) translate(8px, 5px);
+              }
+              &:nth-child(2) {
+                opacity: 0;
+              }
+              &:nth-child(3) {
+                transform: rotate(-45deg) translate(9px, -6px);
+              }
+            }
+          }
+        }
+        .header_logo {
+          font-size: 36px;
+          font-weight: 900;
+          color: var(--skyblue);
+        }
+      }
+    }
+
+    .header_nav {
+      display: block;
+      width: 100%;
+      height: 50px;
+
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      padding: 10px 50px;
+
+      background-color: var(--white);
+
+      overflow: hidden;
+      .navi {
+        display: flex;
+        gap: 50px;
+        font-size: 19px;
+
+        li .link_css {
+          color: var(--gray500);
+          transition: all 0.5s ease;
+
+          &:hover,
+          li.active {
+            color: var(--gray200);
+          }
         }
       }
     }
   }
-}
 
-#main {
-  background-color: skyblue;
-  width: 100%;
-  height: 500px;
-  // padding: 100px 50px;
-  padding: 5vw 12vw;
-}
+  #main {
+    background-color: #c3d2dd;
+    width: 100%;
+    padding: 5vw 12vw;
+  }
 
-#footer {
-  background-color: var(--gray500);
-  width: 100%;
-  padding: 20px 50px;
-  color: var(--white);
-  text-align: center;
+  #footer {
+    background-color: var(--gray500);
+    width: 100%;
+    padding: 20px 50px;
+    color: var(--white);
+    text-align: center;
 
-  p {
-    color: var(--gray300);
+    p {
+      color: var(--gray300);
+    }
   }
 }
 
